// Vitest Snapshot v1

exports[`Skeleton > Skeleton avatarTextVue demo works fine 1`] = `
<div
  class="group"
  data-v-3ed9d44e=""
>
  <div
    class="t-skeleton group-avatar"
    data-v-3ed9d44e=""
  >
    <!---->
  </div>
  <div
    class="t-skeleton group-content"
    data-v-3ed9d44e=""
  >
    <!---->
  </div>
</div>
`;

exports[`Skeleton > Skeleton baseVue demo works fine 1`] = `
<div
  class="t-skeleton"
>
  <!---->
</div>
`;

exports[`Skeleton > Skeleton flashedVue demo works fine 1`] = `
<div
  class="group"
  data-v-51a62a47=""
>
  <div
    class="t-skeleton group-avatar"
    data-v-51a62a47=""
  >
    <!---->
  </div>
  <div
    class="t-skeleton group-content"
    data-v-51a62a47=""
  >
    <!---->
  </div>
</div>
`;

exports[`Skeleton > Skeleton gradientVue demo works fine 1`] = `
<div
  class="t-skeleton"
>
  <!---->
</div>
`;

exports[`Skeleton > Skeleton gridVue demo works fine 1`] = `
<div
  class="t-skeleton"
>
  <!---->
</div>
`;

exports[`Skeleton > Skeleton imageGroupVue demo works fine 1`] = `
<div
  class="group"
  data-v-ac6b2376=""
>
  <div
    class="t-skeleton item"
    data-v-ac6b2376=""
  >
    <!---->
  </div>
  <div
    class="t-skeleton item"
    data-v-ac6b2376=""
  >
    <!---->
  </div>
</div>
`;

exports[`Skeleton > Skeleton mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-9b6b90cc=""
>
  <h1
    class="title"
    data-v-9b6b90cc=""
  >
    Skeleton 骨架屏
  </h1>
  <p
    class="summary"
    data-v-9b6b90cc=""
  >
    当网络较慢时，在页面真实数据加载之前，给用户展示出页面的大致结构。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
    </div>
  </div>
  
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        头像骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="t-skeleton"
          data-v-9b6b90cc=""
        >
          
          <div
            class="t-skeleton__content"
          >
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 64px; height: 64px;"
              />
              
            </div>
            
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图片骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="t-skeleton"
          data-v-9b6b90cc=""
        >
          
          <div
            class="t-skeleton__content"
          >
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-rect"
                style="width: 64px; height: 64px;"
              />
              
            </div>
            
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        文本骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="t-skeleton"
          data-v-9b6b90cc=""
        >
          
          <div
            class="t-skeleton__content"
          >
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 24%; height: 16px; margin-right: 16px;"
              />
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 76%; height: 16px;"
              />
              
            </div>
            
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        段落骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="t-skeleton"
          data-v-9b6b90cc=""
        >
          
          <div
            class="t-skeleton__content"
          >
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 55%;"
              />
              
            </div>
            
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        宫格骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="t-skeleton"
          data-v-9b6b90cc=""
        >
          
          <div
            class="t-skeleton__content"
          >
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 48px;"
              />
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 48px;"
              />
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 48px;"
              />
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 48px;"
              />
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 48px;"
              />
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 16px;"
              />
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 16px;"
              />
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 16px;"
              />
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 16px;"
              />
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 48px; height: 16px;"
              />
              
            </div>
            
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        单元格骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="group"
          data-v-3ed9d44e=""
          data-v-9b6b90cc=""
        >
          <div
            class="t-skeleton group-avatar"
            data-v-3ed9d44e=""
          >
            
            <div
              class="t-skeleton__content"
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-circle"
                  style="width: 48px; height: 48px;"
                />
                
              </div>
              
            </div>
            
          </div>
          <div
            class="t-skeleton group-content"
            data-v-3ed9d44e=""
          >
            
            <div
              class="t-skeleton__content"
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 50%;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 100%;"
                />
                
              </div>
              
            </div>
            
          </div>
        </div>
      </div>
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="group"
          data-v-58b278f0=""
          data-v-9b6b90cc=""
        >
          <div
            class="t-skeleton group-avatar"
            data-v-58b278f0=""
          >
            
            <div
              class="t-skeleton__content"
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-rect"
                  style="width: 48px; height: 48px;"
                />
                
              </div>
              
            </div>
            
          </div>
          <div
            class="t-skeleton group-content"
            data-v-58b278f0=""
          >
            
            <div
              class="t-skeleton__content"
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 50%;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 100%;"
                />
                
              </div>
              
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图片组合骨架屏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="group"
          data-v-9b6b90cc=""
          data-v-ac6b2376=""
        >
          <div
            class="t-skeleton item"
            data-v-ac6b2376=""
          >
            
            <div
              class="t-skeleton__content"
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="height: 171px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 107px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 93px;"
                />
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 32px; margin-left: 41px;"
                />
                
              </div>
              
            </div>
            
          </div>
          <div
            class="t-skeleton item"
            data-v-ac6b2376=""
          >
            
            <div
              class="t-skeleton__content"
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="height: 171px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 107px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 93px;"
                />
                <div
                  class="t-skeleton__col t-skeleton--type-text"
                  style="width: 32px; margin-left: 41px;"
                />
                
              </div>
              
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 动画
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        渐变加载动画
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="t-skeleton"
          data-v-9b6b90cc=""
        >
          
          <div
            class="t-skeleton__content"
          >
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
              />
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
              />
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
              />
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
                style="width: 55%;"
              />
              
            </div>
            
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-9b6b90cc=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        闪烁加载动画
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="skeleton-demo"
        data-v-9b6b90cc=""
      >
        <div
          class="group"
          data-v-51a62a47=""
          data-v-9b6b90cc=""
        >
          <div
            class="t-skeleton group-avatar"
            data-v-51a62a47=""
          >
            
            <div
              class="t-skeleton__content"
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-circle"
                  style="width: 48px; height: 48px;"
                />
                
              </div>
              
            </div>
            
          </div>
          <div
            class="t-skeleton group-content"
            data-v-51a62a47=""
          >
            
            <div
              class="t-skeleton__content"
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
                  style="width: 55%;"
                />
                
              </div>
              
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Skeleton > Skeleton picTextVue demo works fine 1`] = `
<div
  class="group"
  data-v-58b278f0=""
>
  <div
    class="t-skeleton group-avatar"
    data-v-58b278f0=""
  >
    <!---->
  </div>
  <div
    class="t-skeleton group-content"
    data-v-58b278f0=""
  >
    <!---->
  </div>
</div>
`;
